--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -38,15 +38,25 @@ jobs:
         fi
         echo "Commits since $LAST_SHA:"
         # Accumulate commit logs in a shell variable
-        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"%h - %s")
+        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s [~%an](<https://github.com/%ae>)")
         # URL-encode the newline characters for GitHub Actions
         COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
+        # Get the latest commit info
+        LATEST_COMMIT_SHA=$(git rev-parse HEAD)
+        LATEST_COMMIT_AUTHOR=$(git log -1 --pretty=format:'%ae')
+        LATEST_COMMIT_DATE=$(git log -1 --pretty=format:'%cI')
         # Append the encoded commit logs to the COMMIT_LOG environment variable
         echo "COMMIT_LOG=${COMMIT_LOGS}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_SHA=${LATEST_COMMIT_SHA}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_AUTHOR=${LATEST_COMMIT_AUTHOR}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_DATE=${LATEST_COMMIT_DATE}" >> $GITHUB_ENV
         # Debugging: Print the variable to check its content
         echo "$COMMIT_LOGS"
+        echo "$LATEST_COMMIT_SHA"
+        echo "$LATEST_COMMIT_AUTHOR"
+        echo "$LATEST_COMMIT_DATE"
       shell: /usr/bin/bash -e {0}
       env:
         CI: true
@@ -102,20 +112,30 @@ jobs:
         asset_name: app-google-alpha.apk
         asset_content_type: application/vnd.android.package-archive
 
+    - name: Get Latest Commit Author Info
+      id: get_author_info
+      run: |
+        AUTHOR_LOGIN=$(curl -s "https://api.github.com/search/users?q=${{ env.LATEST_COMMIT_AUTHOR }}" | jq -r '.items[0].login')
+        AUTHOR_AVATAR_URL=$(curl -s "https://api.github.com/users/$AUTHOR_LOGIN" | jq -r '.avatar_url')
+        echo "AUTHOR_LOGIN=${AUTHOR_LOGIN}" >> $GITHUB_ENV
+        echo "AUTHOR_AVATAR_URL=${AUTHOR_AVATAR_URL}" >> $GITHUB_ENV
+
     - name: Upload APK to Discord
       shell: bash
       run: |
-        commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g')
+        commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
         # Truncate commit messages if they are too long
         max_length=1900
         if [ ${#commit_messages} -gt $max_length ]; then
           commit_messages="${commit_messages:0:$max_length}... (truncated)"
         fi
-        contentbody=$( jq -nc --arg msg "Alpha-Build: <@714249925248024617> **$VERSION**:" --arg commits "$commit_messages" '{"content": ($msg + "\n" + $commits)}' )
-        curl -F "payload_json=${contentbody}" -F "dantotsu_debug=@app/build/outputs/apk/google/alpha/app-google-alpha.apk" ${{ secrets.DISCORD_WEBHOOK }}
+        contentbody=$( jq -nc --arg title "New Alpha-Build dropped" --arg description "$commit_messages" --arg footer "Version ${{ env.VERSION }}" --arg timestamp "${{ env.LATEST_COMMIT_DATE }}" --arg thumbnail "${{ env.AUTHOR_AVATAR_URL }}" '{"embeds": [{"title": $title, "description": $description, "color": 15532323, "footer": {"text": $footer}, "timestamp": $timestamp, "thumbnail": {"url": $thumbnail}}]}' )
+        curl -H "Content-Type: application/json" -X POST -d "$contentbody" ${{ secrets.DISCORD_WEBHOOK }}
       env:
         COMMIT_LOG: ${{ env.COMMIT_LOG }}
         VERSION: ${{ env.VERSION }}
+        LATEST_COMMIT_DATE: ${{ env.LATEST_COMMIT_DATE }}
+        AUTHOR_AVATAR_URL: ${{ env.AUTHOR_AVATAR_URL }}
 
     - name: Upload Current SHA as Artifact
       uses: actions/upload-artifact@v2
