--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -6,6 +6,7 @@ on:
       - dev
     paths-ignore:
       - '**/README.md'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -15,18 +16,16 @@ jobs:
 
     steps:
     - name: Checkout repo
-      uses: actions/checkout@v4
+      uses: actions/checkout@v3
       with:
         fetch-depth: 0
 
-        
     - name: Download last SHA artifact
       uses: dawidd6/action-download-artifact@v3
       with:
         workflow: beta.yml
         name: last-sha
         path: .
-      
       continue-on-error: true
 
     - name: Get Commits Since Last Run
@@ -39,20 +38,24 @@ jobs:
         fi
         echo "Commits since $LAST_SHA:"
         # Accumulate commit logs in a shell variable
-        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s ~%an")
+        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s [~%an](<https://github.com/%aN>)")
         # URL-encode the newline characters for GitHub Actions
         COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
-        # Append the encoded commit logs to the COMMIT_LOG environment variable
+        # Get the latest commit info
+        LATEST_COMMIT_SHA=$(git rev-parse HEAD)
+        LATEST_COMMIT_AUTHOR=$(git log -1 --pretty=format:'%aN')
+        LATEST_COMMIT_AUTHOR_EMAIL=$(git log -1 --pretty=format:'%ae')
+        LATEST_COMMIT_DATE=$(git log -1 --pretty=format:'%cI')
         echo "COMMIT_LOG=${COMMIT_LOGS}" >> $GITHUB_ENV
-        # Debugging: Print the variable to check its content
-        echo "$COMMIT_LOGS"
-        echo "$COMMIT_LOGS" > commit_log.txt
+        echo "LATEST_COMMIT_SHA=${LATEST_COMMIT_SHA}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_AUTHOR=${LATEST_COMMIT_AUTHOR}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_AUTHOR_EMAIL=${LATEST_COMMIT_AUTHOR_EMAIL}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_DATE=${LATEST_COMMIT_DATE}" >> $GITHUB_ENV
       shell: /usr/bin/bash -e {0}
       env:
         CI: true
-      continue-on-error: true
 
     - name: Save Current SHA for Next Run
       run: echo ${{ github.sha }} > last_sha.txt
@@ -61,69 +64,105 @@ jobs:
       run: |
         VER=$(grep -E -o "versionName \".*\"" app/build.gradle | sed -e 's/versionName //g' | tr -d '"')
         SHA=${{ github.sha }}
-        VERSION="$VER+${SHA:0:7}"
+        SHORT_SHA=${SHA:0:7}
+        VERSION="$VER+$SHORT_SHA"
+        TAG_NAME="v$VER-$SHORT_SHA"
         echo "Version $VERSION"
         echo "VERSION=$VERSION" >> $GITHUB_ENV
+        echo "TAG_NAME=$TAG_NAME" >> $GITHUB_ENV
 
     - name: Setup JDK 17
-      uses: actions/setup-java@v4
+      uses: actions/setup-java@v3
       with:
         distribution: 'temurin'
         java-version: 17
         cache: gradle
-  
-    - name: Decode Keystore File
-      run: echo "${{ secrets.KEYSTORE_FILE }}" | base64 -d > $GITHUB_WORKSPACE/key.keystore
-  
+
     - name: List files in the directory
       run: ls -l
-      
+
     - name: Make gradlew executable
       run: chmod +x ./gradlew
-  
-    - name: Build with Gradle
-      run: ./gradlew assembleGoogleAlpha -Pandroid.injected.signing.store.file=$GITHUB_WORKSPACE/key.keystore -Pandroid.injected.signing.store.password=${{ secrets.KEYSTORE_PASSWORD }} -Pandroid.injected.signing.key.alias=${{ secrets.KEY_ALIAS }} -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }}
 
-    - name: Upload a Build Artifact
-      uses: actions/upload-artifact@v4
+    - name: Build with Gradle
+      run: ./gradlew assembleGoogleAlpha
+
+    - name: Get APK Info
+      run: |
+        APK_PATH="app/build/outputs/apk/google/alpha/app-google-alpha.apk"
+        FILE_SIZE=$(du -h "$APK_PATH" | cut -f1)
+        IS_SIGNED=$(jarsigner -verify -verbose -certs "$APK_PATH" 2>&1 | grep -q 'smk' && echo "signed" || echo "unsigned")
+        echo "FILE_SIZE=${FILE_SIZE}" >> $GITHUB_ENV
+        echo "IS_SIGNED=${IS_SIGNED}" >> $GITHUB_ENV
+
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-          name: Dantotsu
-          retention-days: 5
-          compression-level: 9
-          path: "app/build/outputs/apk/google/alpha/app-google-alpha.apk"
-            
-    - name: Upload APK to Discord and Telegram
-      if: ${{ github.repository == 'rebelonion/Dantotsu' }}
+        tag_name: ${{ env.TAG_NAME }}
+        release_name: "Release ${{ env.TAG_NAME }}"
+        draft: false
+        prerelease: true
+
+    - name: Upload APK to Release
+      uses: actions/upload-release-asset@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: app/build/outputs/apk/google/alpha/app-google-alpha.apk
+        asset_name: app-google-alpha.apk
+        asset_content_type: application/vnd.android.package-archive
+
+    - name: Get Latest Commit Author Info
+      id: get_author_info
+      run: |
+        AUTHOR_LOGIN=$(curl -s "https://api.github.com/search/users?q=${{ env.LATEST_COMMIT_AUTHOR }}" | jq -r '.items[0].login')
+        AUTHOR_AVATAR_URL=$(curl -s "https://api.github.com/users/$AUTHOR_LOGIN" | jq -r '.avatar_url')
+        echo "AUTHOR_LOGIN=${AUTHOR_LOGIN}" >> $GITHUB_ENV
+        echo "AUTHOR_AVATAR_URL=${AUTHOR_AVATAR_URL}" >> $GITHUB_ENV
+
+    - name: Upload APK to Discord
       shell: bash
       run: |
-        #Discord
         commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
-        #  Truncate commit messages if they are too long
-        max_length=1900 # Adjust this value as needed
+        max_length=1900
         if [ ${#commit_messages} -gt $max_length ]; then
           commit_messages="${commit_messages:0:$max_length}... (truncated)"
         fi
-        contentbody=$( jq -nc --arg msg "Alpha-Build: <@&1225347048321191996> **$VERSION**:" --arg commits "$commit_messages" '{"content": ($msg + "\n" + $commits)}' )
-        curl -F "payload_json=${contentbody}" -F "dantotsu_debug=@app/build/outputs/apk/google/alpha/app-google-alpha.apk" ${{ secrets.DISCORD_WEBHOOK }}
-        
-        #Telegram
-        curl -F "chat_id=${{ secrets.TELEGRAM_CHANNEL_ID }}" \
-          -F "document=@app/build/outputs/apk/google/alpha/app-google-alpha.apk" \
-          -F "caption=Alpha-Build: ${VERSION}: ${commit_messages}" \
-         https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendDocument
-
+        download_link="https://github.com/${{ github.repository }}/releases/download/${{ env.TAG_NAME }}/app-google-alpha.apk"
+        contentbody=$( jq -nc \
+          --arg title "New Alpha-Build dropped" \
+          --arg description "@everyone" \
+          --arg footer "Version ${{ env.VERSION }}" \
+          --arg timestamp "${{ env.LATEST_COMMIT_DATE }}" \
+          --arg thumbnail "${{ env.AUTHOR_AVATAR_URL }}" \
+          --arg commits "$commit_messages" \
+          --arg download_info "File size: `${{ env.FILE_SIZE }}`\nKeys: `${{ env.IS_SIGNED }}`\nOther info...\nLink: [here]($download_link)" \
+          '{"embeds": [{"title": $title, "description": $description, "color": 15532323, "fields": [{"name": "Commits:", "value": $commits, "inline": true}, {"name": "Download APK:", "value": $download_info, "inline": true}], "footer": {"text": $footer}, "timestamp": $timestamp, "thumbnail": {"url": $thumbnail}}], "username": "PRE-TESTER", "avatar_url": "https://i.imgur.com/xizROdr.png"}' )
+        curl -H "Content-Type: application/json" -X POST -d "$contentbody" ${{ secrets.DISCORD_WEBHOOK }}
       env:
         COMMIT_LOG: ${{ env.COMMIT_LOG }}
         VERSION: ${{ env.VERSION }}
+        LATEST_COMMIT_DATE: ${{ env.LATEST_COMMIT_DATE }}
+        AUTHOR_AVATAR_URL: ${{ env.AUTHOR_AVATAR_URL }}
+        FILE_SIZE: ${{ env.FILE_SIZE }}
+        IS_SIGNED: ${{ env.IS_SIGNED }}
 
     - name: Upload Current SHA as Artifact
-      uses: actions/upload-artifact@v4
+      uses: actions/upload-artifact@v2
       with:
         name: last-sha
         path: last_sha.txt
 
-    - name: Upload Commit log as Artifact
-      uses: actions/upload-artifact@v4
+    - name: Delete Old Pre-Releases
+      id: delete-pre-releases
+      uses: sgpublic/delete-release-action@master
       with:
-        name: commit-log
-        path: commit_log.txt
+        pre-release-drop: true
+        pre-release-keep-count: 3
+        pre-release-drop-tag: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
