--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -33,32 +33,26 @@ jobs:
         if [ -f last_sha.txt ]; then
           LAST_SHA=$(cat last_sha.txt)
         else
-          # Fallback to first commit if no previous SHA available
           LAST_SHA=$(git rev-list --max-parents=0 HEAD)
         fi
         echo "Commits since $LAST_SHA:"
-        # Accumulate commit logs in a shell variable
-        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s [~%an](<https://github.com/%ae>)")
-        # URL-encode the newline characters for GitHub Actions
+        COMMIT_LOGS=$(git log $LAST_SHA..HEAD --pretty=format:"● %s [~%an](<https://github.com/%an>)")
         COMMIT_LOGS="${COMMIT_LOGS//'%'/'%25'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\n'/'%0A'}"
         COMMIT_LOGS="${COMMIT_LOGS//$'\r'/'%0D'}"
-        # Get the latest commit info
         LATEST_COMMIT_SHA=$(git rev-parse HEAD)
         LATEST_COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')
-        LATEST_COMMIT_AUTHOR_EMAIL=$(git log -1 --pretty=format:'%ae')
+        LATEST_COMMIT_AUTHOR_LOGIN=$(curl -s "https://api.github.com/search/users?q=${LATEST_COMMIT_AUTHOR}" | jq -r '.items[0].login')
         LATEST_COMMIT_DATE=$(git log -1 --pretty=format:'%cI')
-        # Append the encoded commit logs to the COMMIT_LOG environment variable
+        AUTHOR_AVATAR_URL="https://avatars.githubusercontent.com/u/${LATEST_COMMIT_AUTHOR_LOGIN}"
         echo "COMMIT_LOG=${COMMIT_LOGS}" >> $GITHUB_ENV
         echo "LATEST_COMMIT_SHA=${LATEST_COMMIT_SHA}" >> $GITHUB_ENV
-        echo "LATEST_COMMIT_AUTHOR=${LATEST_COMMIT_AUTHOR}" >> $GITHUB_ENV
-        echo "LATEST_COMMIT_AUTHOR_EMAIL=${LATEST_COMMIT_AUTHOR_EMAIL}" >> $GITHUB_ENV
+        echo "LATEST_COMMIT_AUTHOR_LOGIN=${LATEST_COMMIT_AUTHOR_LOGIN}" >> $GITHUB_ENV
         echo "LATEST_COMMIT_DATE=${LATEST_COMMIT_DATE}" >> $GITHUB_ENV
-        # Debugging: Print the variable to check its content
+        echo "AUTHOR_AVATAR_URL=${AUTHOR_AVATAR_URL}" >> $GITHUB_ENV
         echo "$COMMIT_LOGS"
         echo "$LATEST_COMMIT_SHA"
-        echo "$LATEST_COMMIT_AUTHOR"
-        echo "$LATEST_COMMIT_AUTHOR_EMAIL"
+        echo "$LATEST_COMMIT_AUTHOR_LOGIN"
         echo "$LATEST_COMMIT_DATE"
       shell: /usr/bin/bash -e {0}
       env:
@@ -118,7 +112,7 @@ jobs:
     - name: Get Latest Commit Author Info
       id: get_author_info
       run: |
-        AUTHOR_LOGIN=$(curl -s "https://api.github.com/search/users?q=${{ env.LATEST_COMMIT_AUTHOR_EMAIL }}" | jq -r '.items[0].login')
+        AUTHOR_LOGIN=$(curl -s "https://api.github.com/search/users?q=${{ env.LATEST_COMMIT_AUTHOR }}" | jq -r '.items[0].login')
         AUTHOR_AVATAR_URL=$(curl -s "https://api.github.com/users/$AUTHOR_LOGIN" | jq -r '.avatar_url')
         echo "AUTHOR_LOGIN=${AUTHOR_LOGIN}" >> $GITHUB_ENV
         echo "AUTHOR_AVATAR_URL=${AUTHOR_AVATAR_URL}" >> $GITHUB_ENV
@@ -127,12 +121,11 @@ jobs:
       shell: bash
       run: |
         commit_messages=$(echo "$COMMIT_LOG" | sed 's/%0A/\n/g; s/^/\n/')
-        # Truncate commit messages if they are too long
         max_length=1900
         if [ ${#commit_messages} -gt $max_length ]; then
           commit_messages="${commit_messages:0:$max_length}... (truncated)"
         fi
-        contentbody=$( jq -nc --arg title "New Alpha-Build dropped" --arg description "$commit_messages" --arg footer "Version ${{ env.VERSION }}" --arg timestamp "${{ env.LATEST_COMMIT_DATE }}" --arg thumbnail "${{ env.AUTHOR_AVATAR_URL }}" '{"embeds": [{"title": $title, "description": $description, "color": 15532323, "footer": {"text": $footer}, "timestamp": $timestamp, "thumbnail": {"url": $thumbnail}}]}' )
+        contentbody=$( jq -nc --arg title "New Alpha-Build dropped" --arg description "<@951737931159187457>" --arg commits "$commit_messages" --arg footer "Version ${{ env.VERSION }}" --arg timestamp "${{ env.LATEST_COMMIT_DATE }}" --arg thumbnail "${{ env.AUTHOR_AVATAR_URL }}" --arg username "PRE-TESTER" --arg avatar_url "https://i.imgur.com/xizROdr.png" '{"content": null, "embeds": [{"title": $title, "description": $description, "color": 15532323, "fields": [{"name": "Commits:", "value": $commits, "inline": true}], "footer": {"text": $footer}, "timestamp": $timestamp, "thumbnail": {"url": $thumbnail}}], "username": $username, "avatar_url": $avatar_url, "attachments": []}' )
         curl -H "Content-Type: application/json" -X POST -d "$contentbody" ${{ secrets.DISCORD_WEBHOOK }}
       env:
         COMMIT_LOG: ${{ env.COMMIT_LOG }}
@@ -143,7 +136,7 @@ jobs:
     - name: Upload APK to Discord
       shell: bash
       run: |
-        curl -F "payload_json={\"content\":\"New APK Build\"}" -F "dantotsu_debug=@app/build/outputs/apk/google/alpha/app-google-alpha.apk" ${{ secrets.DISCORD_WEBHOOK }}
+        curl -F "dantotsu_debug=@app/build/outputs/apk/google/alpha/app-google-alpha.apk" ${{ secrets.DISCORD_WEBHOOK }}
 
     - name: Upload Current SHA as Artifact
       uses: actions/upload-artifact@v2
